v1/packages.md
Package Versions for v1
================

This r:v1 OpenSAFELY image is based on Ubuntu 20.04 with R 4.0.5.

## R packages

The image comes pre-installed with a set of R packages listed in the
table below. Note that some packages may no longer be on CRAN and so
their URL below will link to the archive of that package’s source code.

| Package               | Version      | Url                                                        |
| :-------------------- | :----------- | :--------------------------------------------------------- |
| abind                 | 1.4-5        | <https://cran.r-project.org/package=abind>                 |
| anytime               | 0.3.9        | <https://cran.r-project.org/package=anytime>               |
| ape                   | 5.7-1        | <https://cran.r-project.org/package=ape>                   |
| arrow                 | 4.0.0.1      | <https://cran.r-project.org/package=arrow>                 |
| ash                   | 1.0-15       | <https://cran.r-project.org/package=ash>                   |
| askpass               | 1.1          | <https://cran.r-project.org/package=askpass>               |
| assertthat            | 0.2.1        | <https://cran.r-project.org/package=assertthat>            |
| astsa                 | 2.1          | <https://cran.r-project.org/package=astsa>                 |
| aweek                 | 1.0.2        | <https://cran.r-project.org/package=aweek>                 |
| backports             | 1.4.1        | <https://cran.r-project.org/package=backports>             |
| base64enc             | 0.1-3        | <https://cran.r-project.org/package=base64enc>             |
| BayesianTools         | 0.1.8        | <https://cran.r-project.org/package=BayesianTools>         |
| bayesm                | 3.1-4        | <https://cran.r-project.org/package=bayesm>                |
| bayesplot             | 1.7.2        | <https://cran.r-project.org/package=bayesplot>             |
| bayestestR            | 0.8.2        | <https://cran.r-project.org/package=bayestestR>            |
| bdsmatrix             | 1.3-4        | <https://cran.r-project.org/package=bdsmatrix>             |
| BH                    | 1.72.0-3     | <https://cran.r-project.org/package=BH>                    |
| binom                 | 1.1-1        | <https://cran.r-project.org/package=binom>                 |
| bit                   | 4.0.4        | <https://cran.r-project.org/package=bit>                   |
| bit64                 | 4.0.5        | <https://cran.r-project.org/package=bit64>                 |
| bitops                | 1.0-6        | <https://cran.r-project.org/package=bitops>                |
| blob                  | 1.2.1        | <https://cran.r-project.org/package=blob>                  |
| boot                  | 1.3-25       | <https://cran.r-project.org/package=boot>                  |
| brglm2                | 0.7.1        | <https://cran.r-project.org/package=brglm2>                |
| bridgesampling        | 1.0-0        | <https://cran.r-project.org/package=bridgesampling>        |
| brms                  | 2.13.5       | <https://cran.r-project.org/package=brms>                  |
| Brobdingnag           | 1.2-6        | <https://cran.r-project.org/package=Brobdingnag>           |
| broom                 | 0.7.5        | <https://cran.r-project.org/package=broom>                 |
| broom.helpers         | 1.2.1        | <https://cran.r-project.org/package=broom.helpers>         |
| butcher               | 0.1.5        | <https://cran.r-project.org/package=butcher>               |
| callr                 | 3.4.3        | <https://cran.r-project.org/package=callr>                 |
| car                   | 3.0-9        | <https://cran.r-project.org/package=car>                   |
| carData               | 3.0-4        | <https://cran.r-project.org/package=carData>               |
| caret                 | 6.0-86       | <https://cran.r-project.org/package=caret>                 |
| caTools               | 1.18.2       | <https://cran.r-project.org/package=caTools>               |
| cellranger            | 1.1.0        | <https://cran.r-project.org/package=cellranger>            |
| checkmate             | 2.0.0        | <https://cran.r-project.org/package=checkmate>             |
| class                 | 7.3-17       | <https://cran.r-project.org/package=class>                 |
| classInt              | 0.4-3        | <https://cran.r-project.org/package=classInt>              |
| cli                   | 3.6.1        | <https://cran.r-project.org/package=cli>                   |
| clipr                 | 0.7.0        | <https://cran.r-project.org/package=clipr>                 |
| clue                  | 0.3-61       | <https://cran.r-project.org/package=clue>                  |
| cluster               | 2.1.0        | <https://cran.r-project.org/package=cluster>               |
| cmprsk                | 2.2-11       | <https://cran.r-project.org/package=cmprsk>                |
| cobalt                | 4.4.0        | <https://cran.r-project.org/package=cobalt>                |
| coda                  | 0.19-3       | <https://cran.r-project.org/package=coda>                  |
| codetools             | 0.2-16       | <https://cran.r-project.org/package=codetools>             |
| colorspace            | 1.4-1        | <https://cran.r-project.org/package=colorspace>            |
| colourpicker          | 1.0          | <https://cran.r-project.org/package=colourpicker>          |
| commonmark            | 1.7          | <https://cran.r-project.org/package=commonmark>            |
| conquer               | 1.0.2        | <https://cran.r-project.org/package=conquer>               |
| consort               | 1.0.1        | <https://cran.r-project.org/package=consort>               |
| corpcor               | 1.6.9        | <https://cran.r-project.org/package=corpcor>               |
| corrplot              | 0.84         | <https://cran.r-project.org/package=corrplot>              |
| cowplot               | 1.0.0        | <https://cran.r-project.org/package=cowplot>               |
| coxme                 | 2.2-16       | <https://cran.r-project.org/package=coxme>                 |
| cpp11                 | 0.2.7        | <https://cran.r-project.org/package=cpp11>                 |
| crayon                | 1.3.4        | <https://cran.r-project.org/package=crayon>                |
| credentials           | 1.3.0        | <https://cran.r-project.org/package=credentials>           |
| crosstalk             | 1.1.0.1      | <https://cran.r-project.org/package=crosstalk>             |
| curl                  | 4.3          | <https://cran.r-project.org/package=curl>                  |
| dagitty               | 0.3-4        | <https://cran.r-project.org/package=dagitty>               |
| data.table            | 1.13.0       | <https://cran.r-project.org/package=data.table>            |
| date                  | 1.2-39       | <https://cran.r-project.org/package=date>                  |
| DBI                   | 1.1.0        | <https://cran.r-project.org/package=DBI>                   |
| dbplyr                | 1.4.4        | <https://cran.r-project.org/package=dbplyr>                |
| dd4d                  | 0.0.0.9000   | <https://remlapmot.r-universe.dev/dd4d>                    |
| Deriv                 | 4.1.6        | <https://cran.r-project.org/package=Deriv>                 |
| desc                  | 1.2.0        | <https://cran.r-project.org/package=desc>                  |
| deSolve               | 1.28         | <https://cran.r-project.org/package=deSolve>               |
| detectseparation      | 0.2          | <https://cran.r-project.org/package=detectseparation>      |
| dfidx                 | 0.0-4        | <https://cran.r-project.org/package=dfidx>                 |
| DHARMa                | 0.4.6        | <https://cran.r-project.org/package=DHARMa>                |
| digest                | 0.6.25       | <https://cran.r-project.org/package=digest>                |
| distributional        | 0.2.0        | <https://cran.r-project.org/package=distributional>        |
| doBy                  | 4.6.15       | <https://cran.r-project.org/package=doBy>                  |
| doParallel            | 1.0.15       | <https://cran.r-project.org/package=doParallel>            |
| dplyr                 | 1.0.2        | <https://cran.r-project.org/package=dplyr>                 |
| DT                    | 0.15         | <https://cran.r-project.org/package=DT>                    |
| dtplyr                | 1.0.1        | <https://cran.r-project.org/package=dtplyr>                |
| dtw                   | 1.23-1       | <https://cran.r-project.org/package=dtw>                   |
| dtwclust              | 5.5.10       | <https://cran.r-project.org/package=dtwclust>              |
| dummies               | 1.5.6        | <https://cran.r-project.org/package=dummies>               |
| dygraphs              | 1.1.1.6      | <https://cran.r-project.org/package=dygraphs>              |
| e1071                 | 1.7-3        | <https://cran.r-project.org/package=e1071>                 |
| egg                   | 0.4.5        | <https://cran.r-project.org/package=egg>                   |
| ellipse               | 0.5.0        | <https://cran.r-project.org/package=ellipse>               |
| ellipsis              | 0.3.1        | <https://cran.r-project.org/package=ellipsis>              |
| emmeans               | 1.7.5        | <https://cran.r-project.org/package=emmeans>               |
| emulator              | 1.2-21       | <https://cran.r-project.org/package=emulator>              |
| enrichwith            | 0.3.1        | <https://cran.r-project.org/package=enrichwith>            |
| Epi                   | 2.46         | <https://cran.r-project.org/package=Epi>                   |
| epitools              | 0.5-10.1     | <https://cran.r-project.org/package=epitools>              |
| estimability          | 1.4.1        | <https://cran.r-project.org/package=estimability>          |
| estimatr              | 0.30.2       | <https://cran.r-project.org/package=estimatr>              |
| etm                   | 1.1.1        | <https://cran.r-project.org/package=etm>                   |
| evaluate              | 0.14         | <https://cran.r-project.org/package=evaluate>              |
| exactRankTests        | 0.8-31       | <https://cran.r-project.org/package=exactRankTests>        |
| expm                  | 0.999-7      | <https://cran.r-project.org/package=expm>                  |
| fansi                 | 0.4.1        | <https://cran.r-project.org/package=fansi>                 |
| farver                | 2.0.3        | <https://cran.r-project.org/package=farver>                |
| fastDummies           | 1.6.3        | <https://cran.r-project.org/package=fastDummies>           |
| fastmap               | 1.0.1        | <https://cran.r-project.org/package=fastmap>               |
| fastshap              | 0.0.7        | <https://cran.r-project.org/package=fastshap>              |
| fda                   | 5.1.7        | <https://cran.r-project.org/package=fda>                   |
| fds                   | 1.8          | <https://cran.r-project.org/package=fds>                   |
| feather               | 0.3.5        | <https://cran.r-project.org/package=feather>               |
| finalfit              | 1.0.4        | <https://cran.r-project.org/package=finalfit>              |
| flexclust             | 1.4-1        | <https://cran.r-project.org/package=flexclust>             |
| flexsurv              | 1.1.1        | <https://cran.r-project.org/package=flexsurv>              |
| FNN                   | 1.1.3        | <https://cran.r-project.org/package=FNN>                   |
| fontBitstreamVera     | 0.1.1        | <https://cran.r-project.org/package=fontBitstreamVera>     |
| fontLiberation        | 0.1.0        | <https://cran.r-project.org/package=fontLiberation>        |
| fontquiver            | 0.2.1        | <https://cran.r-project.org/package=fontquiver>            |
| forcats               | 0.5.0        | <https://cran.r-project.org/package=forcats>               |
| foreach               | 1.5.0        | <https://cran.r-project.org/package=foreach>               |
| forecast              | 8.16         | <https://cran.r-project.org/package=forecast>              |
| foreign               | 0.8-80       | <https://cran.r-project.org/package=foreign>               |
| forestplot            | 1.10.1       | <https://cran.r-project.org/package=forestplot>            |
| forestploter          | 1.0.0        | <https://cran.r-project.org/package=forestploter>          |
| Formula               | 1.2-3        | <https://cran.r-project.org/package=Formula>               |
| fracdiff              | 1.5-3        | <https://cran.r-project.org/package=fracdiff>              |
| fs                    | 1.5.0        | <https://cran.r-project.org/package=fs>                    |
| furrr                 | 0.1.0        | <https://cran.r-project.org/package=furrr>                 |
| future                | 1.18.0       | <https://cran.r-project.org/package=future>                |
| fuzzyjoin             | 0.1.6        | <https://cran.r-project.org/package=fuzzyjoin>             |
| gap                   | 1.5-1        | <https://cran.r-project.org/package=gap>                   |
| gap.datasets          | 0.0.5        | <https://cran.r-project.org/package=gap.datasets>          |
| gdtools               | 0.2.3        | <https://cran.r-project.org/package=gdtools>               |
| geepack               | 1.3.4        | <https://cran.r-project.org/package=geepack>               |
| generics              | 0.1.0        | <https://cran.r-project.org/package=generics>              |
| geosphere             | 1.5-18       | <https://cran.r-project.org/package=geosphere>             |
| gert                  | 1.2.0        | <https://cran.r-project.org/package=gert>                  |
| getopt                | 1.20.3       | <https://cran.r-project.org/package=getopt>                |
| gets                  | 0.29         | <https://cran.r-project.org/package=gets>                  |
| ggalluvial            | 0.12.3       | <https://cran.r-project.org/package=ggalluvial>            |
| GGally                | 2.0.0        | <https://cran.r-project.org/package=GGally>                |
| ggdist                | 2.2.0        | <https://cran.r-project.org/package=ggdist>                |
| ggfittext             | 0.10.0       | <https://cran.r-project.org/package=ggfittext>             |
| ggfortify             | 0.4.15       | <https://cran.r-project.org/package=ggfortify>             |
| gggenes               | 0.5.0        | <https://cran.r-project.org/package=gggenes>               |
| ggh4x                 | 0.2.6        | <https://cran.r-project.org/package=ggh4x>                 |
| ggplot2               | 3.4.2        | <https://cran.r-project.org/package=ggplot2>               |
| ggpubr                | 0.4.0        | <https://cran.r-project.org/package=ggpubr>                |
| ggrepel               | 0.9.1        | <https://cran.r-project.org/package=ggrepel>               |
| ggridges              | 0.5.2        | <https://cran.r-project.org/package=ggridges>              |
| ggsci                 | 2.9          | <https://cran.r-project.org/package=ggsci>                 |
| ggsignif              | 0.6.0        | <https://cran.r-project.org/package=ggsignif>              |
| ggvenn                | 0.1.9        | <https://cran.r-project.org/package=ggvenn>                |
| gh                    | 1.2.0        | <https://cran.r-project.org/package=gh>                    |
| gitcreds              | 0.1.1        | <https://cran.r-project.org/package=gitcreds>              |
| glmmTMB               | 1.1.2        | <https://cran.r-project.org/package=glmmTMB>               |
| glmnet                | 4.1-4        | <https://cran.r-project.org/package=glmnet>                |
| globals               | 0.12.5       | <https://cran.r-project.org/package=globals>               |
| glue                  | 1.4.2        | <https://cran.r-project.org/package=glue>                  |
| Gmisc                 | 2.0.1        | <https://cran.r-project.org/package=Gmisc>                 |
| gmm                   | 1.8          | <https://cran.r-project.org/package=gmm>                   |
| gnm                   | 1.1-1        | <https://cran.r-project.org/package=gnm>                   |
| gower                 | 0.2.2        | <https://cran.r-project.org/package=gower>                 |
| gridExtra             | 2.3          | <https://cran.r-project.org/package=gridExtra>             |
| gridtext              | 0.1.5        | <https://cran.r-project.org/package=gridtext>              |
| gt                    | 0.2.2        | <https://cran.r-project.org/package=gt>                    |
| gtable                | 0.3.0        | <https://cran.r-project.org/package=gtable>                |
| gtools                | 3.8.2        | <https://cran.r-project.org/package=gtools>                |
| gtsummary             | 1.3.7        | <https://cran.r-project.org/package=gtsummary>             |
| haven                 | 2.3.1        | <https://cran.r-project.org/package=haven>                 |
| HDInterval            | 0.2.2        | <https://cran.r-project.org/package=HDInterval>            |
| hdrcde                | 3.3          | <https://cran.r-project.org/package=hdrcde>                |
| here                  | 0.1          | <https://cran.r-project.org/package=here>                  |
| hexbin                | 1.28.3       | <https://cran.r-project.org/package=hexbin>                |
| highr                 | 0.8          | <https://cran.r-project.org/package=highr>                 |
| Hmisc                 | 4.4-1        | <https://cran.r-project.org/package=Hmisc>                 |
| hms                   | 0.5.3        | <https://cran.r-project.org/package=hms>                   |
| htmlTable             | 2.0.1        | <https://cran.r-project.org/package=htmlTable>             |
| htmltools             | 0.5.0        | <https://cran.r-project.org/package=htmltools>             |
| htmlwidgets           | 1.5.1        | <https://cran.r-project.org/package=htmlwidgets>           |
| httpuv                | 1.5.4        | <https://cran.r-project.org/package=httpuv>                |
| httr                  | 1.4.2        | <https://cran.r-project.org/package=httr>                  |
| httr2                 | 0.2.3        | <https://cran.r-project.org/package=httr2>                 |
| IDPmisc               | 1.1.20       | <https://cran.r-project.org/package=IDPmisc>               |
| igraph                | 1.2.5        | <https://cran.r-project.org/package=igraph>                |
| incidence             | 1.7.3        | <https://cran.r-project.org/package=incidence>             |
| ini                   | 0.3.1        | <https://cran.r-project.org/package=ini>                   |
| inline                | 0.3.15       | <https://cran.r-project.org/package=inline>                |
| insight               | 0.13.1       | <https://cran.r-project.org/package=insight>               |
| interactions          | 1.1.3        | <https://cran.r-project.org/package=interactions>          |
| ipred                 | 0.9-9        | <https://cran.r-project.org/package=ipred>                 |
| isoband               | 0.2.2        | <https://cran.r-project.org/package=isoband>               |
| iterators             | 1.0.12       | <https://cran.r-project.org/package=iterators>             |
| janitor               | 2.0.1        | <https://cran.r-project.org/package=janitor>               |
| jpeg                  | 0.1-8.1      | <https://cran.r-project.org/package=jpeg>                  |
| jsonlite              | 1.7.0        | <https://cran.r-project.org/package=jsonlite>              |
| jtools                | 2.1.2        | <https://cran.r-project.org/package=jtools>                |
| kableExtra            | 1.3.4        | <https://cran.r-project.org/package=kableExtra>            |
| kernlab               | 0.9-29       | <https://cran.r-project.org/package=kernlab>               |
| KernSmooth            | 2.23-17      | <https://cran.r-project.org/package=KernSmooth>            |
| km.ci                 | 0.5-2        | <https://cran.r-project.org/package=km.ci>                 |
| KMsurv                | 0.1-5        | <https://cran.r-project.org/package=KMsurv>                |
| knitr                 | 1.29         | <https://cran.r-project.org/package=knitr>                 |
| ks                    | 1.11.7       | <https://cran.r-project.org/package=ks>                    |
| labeling              | 0.3          | <https://cran.r-project.org/package=labeling>              |
| labelled              | 2.7.0        | <https://cran.r-project.org/package=labelled>              |
| later                 | 1.1.0.1      | <https://cran.r-project.org/package=later>                 |
| lattice               | 0.20-41      | <https://cran.r-project.org/package=lattice>               |
| latticeExtra          | 0.6-29       | <https://cran.r-project.org/package=latticeExtra>          |
| lava                  | 1.6.8.1      | <https://cran.r-project.org/package=lava>                  |
| lazyeval              | 0.2.2        | <https://cran.r-project.org/package=lazyeval>              |
| lcmm                  | 2.0.0        | <https://cran.r-project.org/package=lcmm>                  |
| lifecycle             | 1.0.3        | <https://cran.r-project.org/package=lifecycle>             |
| listenv               | 0.8.0        | <https://cran.r-project.org/package=listenv>               |
| lme4                  | 1.1-23       | <https://cran.r-project.org/package=lme4>                  |
| lmtest                | 0.9-37       | <https://cran.r-project.org/package=lmtest>                |
| lobstr                | 1.1.1        | <https://cran.r-project.org/package=lobstr>                |
| locfit                | 1.5-9.4      | <https://cran.r-project.org/package=locfit>                |
| loo                   | 2.3.1        | <https://cran.r-project.org/package=loo>                   |
| lpSolveAPI            | 5.5.2.0-17.7 | <https://cran.r-project.org/package=lpSolveAPI>            |
| lubridate             | 1.7.9        | <https://cran.r-project.org/package=lubridate>             |
| magick                | 2.7.3        | <https://cran.r-project.org/package=magick>                |
| magrittr              | 1.5          | <https://cran.r-project.org/package=magrittr>              |
| maptools              | 1.0-2        | <https://cran.r-project.org/package=maptools>              |
| markdown              | 1.1          | <https://cran.r-project.org/package=markdown>              |
| marqLevAlg            | 2.0.7        | <https://cran.r-project.org/package=marqLevAlg>            |
| MASS                  | 7.3-52       | <https://cran.r-project.org/package=MASS>                  |
| MatchIt               | 4.2.0        | <https://cran.r-project.org/package=MatchIt>               |
| mathjaxr              | 1.6-0        | <https://cran.r-project.org/package=mathjaxr>              |
| Matrix                | 1.2-18       | <https://cran.r-project.org/package=Matrix>                |
| MatrixModels          | 0.4-1        | <https://cran.r-project.org/package=MatrixModels>          |
| matrixStats           | 0.56.0       | <https://cran.r-project.org/package=matrixStats>           |
| maxstat               | 0.7-25       | <https://cran.r-project.org/package=maxstat>               |
| mclust                | 5.4.7        | <https://cran.r-project.org/package=mclust>                |
| metadat               | 1.2-0        | <https://cran.r-project.org/package=metadat>               |
| metafor               | 3.8-1        | <https://cran.r-project.org/package=metafor>               |
| mets                  | 1.2.9        | <https://cran.r-project.org/package=mets>                  |
| mgcv                  | 1.8-33       | <https://cran.r-project.org/package=mgcv>                  |
| mice                  | 3.11.0       | <https://cran.r-project.org/package=mice>                  |
| microbenchmark        | 1.5.0        | <https://cran.r-project.org/package=microbenchmark>        |
| mime                  | 0.9          | <https://cran.r-project.org/package=mime>                  |
| miniUI                | 0.1.1.1      | <https://cran.r-project.org/package=miniUI>                |
| minqa                 | 1.2.4        | <https://cran.r-project.org/package=minqa>                 |
| mitools               | 2.4          | <https://cran.r-project.org/package=mitools>               |
| mlogit                | 1.1-1        | <https://cran.r-project.org/package=mlogit>                |
| mnlogit               | 1.2.6        | <https://cran.r-project.org/package=mnlogit>               |
| ModelMetrics          | 1.2.2.2      | <https://cran.r-project.org/package=ModelMetrics>          |
| modelr                | 0.1.8        | <https://cran.r-project.org/package=modelr>                |
| modelsummary          | 0.6.6        | <https://cran.r-project.org/package=modelsummary>          |
| modeltools            | 0.2-23       | <https://cran.r-project.org/package=modeltools>            |
| msm                   | 1.7          | <https://cran.r-project.org/package=msm>                   |
| mstate                | 0.3.1        | <https://cran.r-project.org/package=mstate>                |
| muhaz                 | 1.2.6.1      | <https://cran.r-project.org/package=muhaz>                 |
| multcomp              | 1.4-18       | <https://cran.r-project.org/package=multcomp>              |
| multicool             | 0.1-11       | <https://cran.r-project.org/package=multicool>             |
| munsell               | 0.5.0        | <https://cran.r-project.org/package=munsell>               |
| mvtnorm               | 1.1-1        | <https://cran.r-project.org/package=mvtnorm>               |
| naniar                | 0.6.0        | <https://cran.r-project.org/package=naniar>                |
| NHPoisson             | 3.3          | <https://cran.r-project.org/package=NHPoisson>             |
| nleqslv               | 3.3.2        | <https://cran.r-project.org/package=nleqslv>               |
| nlme                  | 3.1-149      | <https://cran.r-project.org/package=nlme>                  |
| nloptr                | 1.2.2.2      | <https://cran.r-project.org/package=nloptr>                |
| nnet                  | 7.3-14       | <https://cran.r-project.org/package=nnet>                  |
| numDeriv              | 2016.8-1.1   | <https://cran.r-project.org/package=numDeriv>              |
| odbc                  | 1.3.0        | <https://cran.r-project.org/package=odbc>                  |
| openssl               | 1.4.2        | <https://cran.r-project.org/package=openssl>               |
| openxlsx              | 4.1.5        | <https://cran.r-project.org/package=openxlsx>              |
| optparse              | 1.6.6        | <https://cran.r-project.org/package=optparse>              |
| packrat               | 0.5.0        | <https://cran.r-project.org/package=packrat>               |
| pacman                | 0.5.1        | <https://cran.r-project.org/package=pacman>                |
| padr                  | 0.6.2        | <https://cran.r-project.org/package=padr>                  |
| pammtools             | 0.5.8        | <https://cran.r-project.org/package=pammtools>             |
| pander                | 0.6.3        | <https://cran.r-project.org/package=pander>                |
| parameters            | 0.12.0       | <https://cran.r-project.org/package=parameters>            |
| parglm                | 0.1.6        | <https://cran.r-project.org/package=parglm>                |
| patchwork             | 1.1.1        | <https://cran.r-project.org/package=patchwork>             |
| pbapply               | 1.5-0        | <https://cran.r-project.org/package=pbapply>               |
| pbkrtest              | 0.4-8.6      | <https://cran.r-project.org/package=pbkrtest>              |
| pcaPP                 | 1.9-73       | <https://cran.r-project.org/package=pcaPP>                 |
| pch                   | 2.0          | <https://cran.r-project.org/package=pch>                   |
| pec                   | 2021.10.11   | <https://cran.r-project.org/package=pec>                   |
| performance           | 0.7.0        | <https://cran.r-project.org/package=performance>           |
| PerformanceAnalytics  | 2.0.4        | <https://cran.r-project.org/package=PerformanceAnalytics>  |
| PHEindicatormethods   | 1.3.2        | <https://cran.r-project.org/package=PHEindicatormethods>   |
| pillar                | 1.4.6        | <https://cran.r-project.org/package=pillar>                |
| pkgbuild              | 1.1.0        | <https://cran.r-project.org/package=pkgbuild>              |
| pkgconfig             | 2.0.3        | <https://cran.r-project.org/package=pkgconfig>             |
| pkgload               | 1.1.0        | <https://cran.r-project.org/package=pkgload>               |
| plotly                | 4.8.0        | <https://cran.r-project.org/package=plotly>                |
| plotrix               | 3.7-8        | <https://cran.r-project.org/package=plotrix>               |
| plyr                  | 1.8.6        | <https://cran.r-project.org/package=plyr>                  |
| png                   | 0.1-7        | <https://cran.r-project.org/package=png>                   |
| polspline             | 1.1.19       | <https://cran.r-project.org/package=polspline>             |
| polynom               | 1.4-0        | <https://cran.r-project.org/package=polynom>               |
| praise                | 1.0.0        | <https://cran.r-project.org/package=praise>                |
| predtools             | 0.0.2        | <https://cran.r-project.org/package=predtools>             |
| prettyunits           | 1.1.1        | <https://cran.r-project.org/package=prettyunits>           |
| pROC                  | 1.16.2       | <https://cran.r-project.org/package=pROC>                  |
| processx              | 3.4.4        | <https://cran.r-project.org/package=processx>              |
| prodlim               | 2019.11.13   | <https://cran.r-project.org/package=prodlim>               |
| progress              | 1.2.2        | <https://cran.r-project.org/package=progress>              |
| promises              | 1.1.1        | <https://cran.r-project.org/package=promises>              |
| proxy                 | 0.4-27       | <https://cran.r-project.org/package=proxy>                 |
| ps                    | 1.3.4        | <https://cran.r-project.org/package=ps>                    |
| pscl                  | 1.5.5.1      | <https://cran.r-project.org/package=pscl>                  |
| pseudo                | 1.4.3        | <https://cran.r-project.org/package=pseudo>                |
| Publish               | 2020.12.23   | <https://cran.r-project.org/package=Publish>               |
| purrr                 | 0.3.4        | <https://cran.r-project.org/package=purrr>                 |
| qgam                  | 1.3.4        | <https://cran.r-project.org/package=qgam>                  |
| quadprog              | 1.5-8        | <https://cran.r-project.org/package=quadprog>              |
| quantmod              | 0.4.26       | <https://cran.r-project.org/package=quantmod>              |
| quantreg              | 5.61         | <https://cran.r-project.org/package=quantreg>              |
| qvcalc                | 1.0.2        | <https://cran.r-project.org/package=qvcalc>                |
| R.methodsS3           | 1.8.1        | <https://cran.r-project.org/package=R.methodsS3>           |
| R.oo                  | 1.25.0       | <https://cran.r-project.org/package=R.oo>                  |
| R.utils               | 2.12.0       | <https://cran.r-project.org/package=R.utils>               |
| R6                    | 2.4.1        | <https://cran.r-project.org/package=R6>                    |
| rainbow               | 3.6          | <https://cran.r-project.org/package=rainbow>               |
| randomForest          | 4.6-14       | <https://cran.r-project.org/package=randomForest>          |
| randomForestExplainer | 0.10.1       | <https://cran.r-project.org/package=randomForestExplainer> |
| randtoolbox           | 2.0.2        | <https://cran.r-project.org/package=randtoolbox>           |
| ranger                | 0.13.1       | <https://cran.r-project.org/package=ranger>                |
| rappdirs              | 0.3.1        | <https://cran.r-project.org/package=rappdirs>              |
| rbibutils             | 2.0          | <https://cran.r-project.org/package=rbibutils>             |
| RColorBrewer          | 1.1-2        | <https://cran.r-project.org/package=RColorBrewer>          |
| RConics               | 1.1.1        | <https://cran.r-project.org/package=RConics>               |
| Rcpp                  | 1.0.5        | <https://cran.r-project.org/package=Rcpp>                  |
| RcppArmadillo         | 0.9.900.3.0  | <https://cran.r-project.org/package=RcppArmadillo>         |
| RcppEigen             | 0.3.3.7.0    | <https://cran.r-project.org/package=RcppEigen>             |
| RcppParallel          | 5.0.2        | <https://cran.r-project.org/package=RcppParallel>          |
| RcppProgress          | 0.4.2        | <https://cran.r-project.org/package=RcppProgress>          |
| RcppRoll              | 0.3.0        | <https://cran.r-project.org/package=RcppRoll>              |
| RcppThread            | 2.1.3        | <https://cran.r-project.org/package=RcppThread>            |
| RCurl                 | 1.98-1.2     | <https://cran.r-project.org/package=RCurl>                 |
| Rdpack                | 2.1.1        | <https://cran.r-project.org/package=Rdpack>                |
| rdrobust              | 2.1.1        | <https://cran.r-project.org/package=rdrobust>              |
| readr                 | 1.3.1        | <https://cran.r-project.org/package=readr>                 |
| readxl                | 1.3.1        | <https://cran.r-project.org/package=readxl>                |
| recipes               | 0.1.15       | <https://cran.r-project.org/package=recipes>               |
| registry              | 0.5-1        | <https://cran.r-project.org/package=registry>              |
| relimp                | 1.0-5        | <https://cran.r-project.org/package=relimp>                |
| relsurv               | 2.2-3        | <https://cran.r-project.org/package=relsurv>               |
| rematch               | 1.0.1        | <https://cran.r-project.org/package=rematch>               |
| remotes               | 2.2.0        | <https://cran.r-project.org/package=remotes>               |
| renv                  | 0.16.0       | <https://cran.r-project.org/package=renv>                  |
| repr                  | 1.1.0        | <https://cran.r-project.org/package=repr>                  |
| reprex                | 0.3.0        | <https://cran.r-project.org/package=reprex>                |
| reshape               | 0.8.8        | <https://cran.r-project.org/package=reshape>               |
| reshape2              | 1.4.4        | <https://cran.r-project.org/package=reshape2>              |
| rgdal                 | 1.5-16       | <https://cran.r-project.org/package=rgdal>                 |
| rgeos                 | 0.5-3        | <https://cran.r-project.org/package=rgeos>                 |
| rio                   | 0.5.16       | <https://cran.r-project.org/package=rio>                   |
| riskRegression        | 2021.10.10   | <https://cran.r-project.org/package=riskRegression>        |
| rlang                 | 1.1.1        | <https://cran.r-project.org/package=rlang>                 |
| rmarkdown             | 2.3          | <https://cran.r-project.org/package=rmarkdown>             |
| rms                   | 6.2-0        | <https://cran.r-project.org/package=rms>                   |
| rngWELL               | 0.10-7       | <https://cran.r-project.org/package=rngWELL>               |
| ROI                   | 1.0-0        | <https://cran.r-project.org/package=ROI>                   |
| ROI.plugin.lpsolve    | 1.0-0        | <https://cran.r-project.org/package=ROI.plugin.lpsolve>    |
| rpart                 | 4.1-15       | <https://cran.r-project.org/package=rpart>                 |
| rpart.plot            | 3.1.1        | <https://cran.r-project.org/package=rpart.plot>            |
| rprojroot             | 1.3-2        | <https://cran.r-project.org/package=rprojroot>             |
| rsample               | 1.0.0        | <https://cran.r-project.org/package=rsample>               |
| rsconnect             | 0.8.16       | <https://cran.r-project.org/package=rsconnect>             |
| RSpectra              | 0.16-1       | <https://cran.r-project.org/package=RSpectra>              |
| rstan                 | 2.21.2       | <https://cran.r-project.org/package=rstan>                 |
| rstantools            | 2.1.1        | <https://cran.r-project.org/package=rstantools>            |
| rstatix               | 0.6.0        | <https://cran.r-project.org/package=rstatix>               |
| rstudioapi            | 0.11         | <https://cran.r-project.org/package=rstudioapi>            |
| rvest                 | 0.3.6        | <https://cran.r-project.org/package=rvest>                 |
| sandwich              | 2.5-1        | <https://cran.r-project.org/package=sandwich>              |
| sass                  | 0.3.0        | <https://cran.r-project.org/package=sass>                  |
| scales                | 1.2.1        | <https://cran.r-project.org/package=scales>                |
| SCCS                  | 1.2          | <https://cran.r-project.org/package=SCCS>                  |
| segmented             | 1.4-1        | <https://cran.r-project.org/package=segmented>             |
| selectr               | 0.4-2        | <https://cran.r-project.org/package=selectr>               |
| sf                    | 0.9-5        | <https://cran.r-project.org/package=sf>                    |
| shades                | 1.4.0        | <https://cran.r-project.org/package=shades>                |
| shape                 | 1.4.6        | <https://cran.r-project.org/package=shape>                 |
| shapviz               | 0.8.0        | <https://cran.r-project.org/package=shapviz>               |
| shiny                 | 1.5.0        | <https://cran.r-project.org/package=shiny>                 |
| shinyjs               | 1.1          | <https://cran.r-project.org/package=shinyjs>               |
| shinystan             | 2.5.0        | <https://cran.r-project.org/package=shinystan>             |
| shinythemes           | 1.1.2        | <https://cran.r-project.org/package=shinythemes>           |
| skimr                 | 2.1.2        | <https://cran.r-project.org/package=skimr>                 |
| slam                  | 0.1-48       | <https://cran.r-project.org/package=slam>                  |
| slider                | 0.3.0        | <https://cran.r-project.org/package=slider>                |
| snakecase             | 0.11.0       | <https://cran.r-project.org/package=snakecase>             |
| sourcetools           | 0.1.7        | <https://cran.r-project.org/package=sourcetools>           |
| sp                    | 1.4-2        | <https://cran.r-project.org/package=sp>                    |
| SparseM               | 1.78         | <https://cran.r-project.org/package=SparseM>               |
| splines2              | 0.4.1        | <https://cran.r-project.org/package=splines2>              |
| SQUAREM               | 2020.5       | <https://cran.r-project.org/package=SQUAREM>               |
| StanHeaders           | 2.21.0-6     | <https://cran.r-project.org/package=StanHeaders>           |
| statmod               | 1.4.34       | <https://cran.r-project.org/package=statmod>               |
| stringdist            | 0.9.10       | <https://cran.r-project.org/package=stringdist>            |
| stringi               | 1.4.6        | <https://cran.r-project.org/package=stringi>               |
| stringr               | 1.4.0        | <https://cran.r-project.org/package=stringr>               |
| survey                | 4.1-1        | <https://cran.r-project.org/package=survey>                |
| survival              | 3.2-3        | <https://cran.r-project.org/package=survival>              |
| survminer             | 0.4.8        | <https://cran.r-project.org/package=survminer>             |
| survMisc              | 0.5.5        | <https://cran.r-project.org/package=survMisc>              |
| svglite               | 1.2.3.2      | <https://cran.r-project.org/package=svglite>               |
| sweep                 | 0.2.5        | <https://cran.r-project.org/package=sweep>                 |
| sys                   | 3.4          | <https://cran.r-project.org/package=sys>                   |
| systemfonts           | 0.3.2        | <https://cran.r-project.org/package=systemfonts>           |
| tables                | 0.9.6        | <https://cran.r-project.org/package=tables>                |
| testthat              | 2.3.2        | <https://cran.r-project.org/package=testthat>              |
| TH.data               | 1.1-0        | <https://cran.r-project.org/package=TH.data>               |
| threejs               | 0.3.3        | <https://cran.r-project.org/package=threejs>               |
| tibble                | 3.0.3        | <https://cran.r-project.org/package=tibble>                |
| tictoc                | 1.0          | <https://cran.r-project.org/package=tictoc>                |
| tidyquant             | 1.0.9        | <https://cran.r-project.org/package=tidyquant>             |
| tidyr                 | 1.1.2        | <https://cran.r-project.org/package=tidyr>                 |
| tidyselect            | 1.1.0        | <https://cran.r-project.org/package=tidyselect>            |
| tidyverse             | 1.3.0        | <https://cran.r-project.org/package=tidyverse>             |
| timeDate              | 3043.102     | <https://cran.r-project.org/package=timeDate>              |
| timereg               | 2.0.1        | <https://cran.r-project.org/package=timereg>               |
| timetk                | 2.7.0        | <https://cran.r-project.org/package=timetk>                |
| tinytex               | 0.25         | <https://cran.r-project.org/package=tinytex>               |
| TMB                   | 1.9.10       | <https://cran.r-project.org/package=TMB>                   |
| tmvtnorm              | 1.5          | <https://cran.r-project.org/package=tmvtnorm>              |
| tseries               | 0.10-58      | <https://cran.r-project.org/package=tseries>               |
| tsfeatures            | 1.1.1        | <https://cran.r-project.org/package=tsfeatures>            |
| tsModel               | 0.6          | <https://cran.r-project.org/package=tsModel>               |
| TTR                   | 0.24.4       | <https://cran.r-project.org/package=TTR>                   |
| twopartm              | 0.1.0        | <https://cran.r-project.org/package=twopartm>              |
| units                 | 0.6-7        | <https://cran.r-project.org/package=units>                 |
| UpSetR                | 1.4.0        | <https://cran.r-project.org/package=UpSetR>                |
| urca                  | 1.3-4        | <https://cran.r-project.org/package=urca>                  |
| usethis               | 2.0.1        | <https://cran.r-project.org/package=usethis>               |
| utf8                  | 1.1.4        | <https://cran.r-project.org/package=utf8>                  |
| V8                    | 3.2.0        | <https://cran.r-project.org/package=V8>                    |
| vcd                   | 1.4-9        | <https://cran.r-project.org/package=vcd>                   |
| vctrs                 | 0.6.2        | <https://cran.r-project.org/package=vctrs>                 |
| VGAM                  | 1.1-6        | <https://cran.r-project.org/package=VGAM>                  |
| viridis               | 0.5.1        | <https://cran.r-project.org/package=viridis>               |
| viridisLite           | 0.3.0        | <https://cran.r-project.org/package=viridisLite>           |
| visdat                | 0.5.3        | <https://cran.r-project.org/package=visdat>                |
| warp                  | 0.2.1        | <https://cran.r-project.org/package=warp>                  |
| webshot               | 0.5.2        | <https://cran.r-project.org/package=webshot>               |
| WeightIt              | 0.13.1       | <https://cran.r-project.org/package=WeightIt>              |
| whisker               | 0.4          | <https://cran.r-project.org/package=whisker>               |
| withr                 | 2.5.0        | <https://cran.r-project.org/package=withr>                 |
| xfun                  | 0.16         | <https://cran.r-project.org/package=xfun>                  |
| xgboost               | 1.7.5.1      | <https://cran.r-project.org/package=xgboost>               |
| XML                   | 3.99-0.6     | <https://cran.r-project.org/package=XML>                   |
| xml2                  | 1.3.2        | <https://cran.r-project.org/package=xml2>                  |
| xtable                | 1.8-4        | <https://cran.r-project.org/package=xtable>                |
| xts                   | 0.12-0       | <https://cran.r-project.org/package=xts>                   |
| yaml                  | 2.2.1        | <https://cran.r-project.org/package=yaml>                  |
| zip                   | 2.1.1        | <https://cran.r-project.org/package=zip>                   |
| zoo                   | 1.8-8        | <https://cran.r-project.org/package=zoo>                   |
| base                  | 4.0.5        | <https://cran.r-project.org/package=base>                  |
| compiler              | 4.0.5        | <https://cran.r-project.org/package=compiler>              |
| datasets              | 4.0.5        | <https://cran.r-project.org/package=datasets>              |
| graphics              | 4.0.5        | <https://cran.r-project.org/package=graphics>              |
| grDevices             | 4.0.5        | <https://cran.r-project.org/package=grDevices>             |
| grid                  | 4.0.5        | <https://cran.r-project.org/package=grid>                  |
| methods               | 4.0.5        | <https://cran.r-project.org/package=methods>               |
| parallel              | 4.0.5        | <https://cran.r-project.org/package=parallel>              |
| splines               | 4.0.5        | <https://cran.r-project.org/package=splines>               |
| stats                 | 4.0.5        | <https://cran.r-project.org/package=stats>                 |
| stats4                | 4.0.5        | <https://cran.r-project.org/package=stats4>                |
| tcltk                 | 4.0.5        | <https://cran.r-project.org/package=tcltk>                 |
| tools                 | 4.0.5        | <https://cran.r-project.org/package=tools>                 |
| utils                 | 4.0.5        | <https://cran.r-project.org/package=utils>                 |
